--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_NCP_CLIENT_ID = yjkpusk46j
-NEXT_PUBLIC_API_URL = http://locahost:3000
+NEXT_PUBLIC_API_URL=https://next-js-map.vercel.app
